# University-labs

./: .gitignore
AP/lab_03/: lab_03_1  lab_03_1.cpp  lab_03_2  lab_03_2.cpp  lab_03_3  lab_03_3.cpp  lab_03_4.cpp
AP/lab_04/: lab_04_1  lab_04_1.cpp  lab_04_3.cpp  lab_04_4  lab_04_4.cpp  lab_04_5  lab_04_5.cpp  lab_04_6  lab_04_7  lab_04_7.cpp
AP/lab_05/lab_05_0/: CMakeLists.txt
AP/lab_05/lab_05_0/src/: lab_05_0  lab_05_0.cpp
AP/lab_05/lab_05_0/tests/: test_lab_05_0.cpp
AP/lab_05/lab_05_1/scripts/: lab_05_1  lab_05_1.cpp
AP/lab_05/lab_05_2/scripts/: lab_05_2
AP/lab_05/lab_05_3/scripts/: lab_05_3  lab_05_3.cpp
AP/lab_05/lab_05_4/scripts/: lab_05_4.cpp
AP/lab_05/lab_05_5/scripts/: lab_05_5  lab_05_5.cpp
D_Math/lab_01/: lab_01_1  lab_01_1.cpp  main  main.cpp
algorithmization_and_programming/5_lab_0/lib/: function.cpp  function.h
algorithmization_and_programming/5_lab_0/src/: main.cpp
algorithmization_and_programming/5_lab_0/tests/: unit_tests.cpp
algorithmization_and_programming/7_lab/1_lab_it/lib/: function.cpp  function.h
algorithmization_and_programming/7_lab/1_lab_it/report/: data.txt  (+2 more)
algorithmization_and_programming/lab_03/: lab_03_2  lab_03_2.cpp  lab_03_3  lab_03_4
algorithmization_and_programming/lab_04/: lab_04_2  lab_04_2.cpp  lab_04_3  lab_04_4.cpp  lab_04_5.cpp  lab_04_6.cpp  lab_04_7
algorithmization_and_programming/lab_06/lab_06_4_it/: CMakeLists.txt
algorithmization_and_programming/lab_template/lab_number/: packy.py
boolean_math/lab_01/func/: functions.cpp  functions.h
boolean_math/lab_01/src/: lab_01_1_3.cpp  lab_01_1_5.cpp
(+127 files in other folders)
